----------------------------------------------------------------------
 OmegaT 2.5.0 update 5
----------------------------------------------------------------------
   0 Enhancement
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.0 update 5 vs. 2.5.0 update 4

  Bug fixes:

  - GPL license has an outdated FSF address
  http://sourceforge.net/support/tracker.php?aid=3440748

  - Android filter: non-translatable text was not ignored

  - Log messages on TMX loading were missing

  Localisation updates:

  - Dutch localisation updated to 2.5.0 update 3 (UI, readme, documentation)

----------------------------------------------------------------------
 OmegaT 2.5.0 update 4
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.5.0 update 4 vs. 2.5.0 update 3

  Bug fixes:
  
  - Entering empty translations wasn't working

----------------------------------------------------------------------
 OmegaT 2.5.0 update 3
----------------------------------------------------------------------
   8 Enhancements
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.0 update 3 vs. 2.5.0 update 2

  Implemented requests:

  - TMX: match other languages if no project target language
  http://sourceforge.net/support/tracker.php?aid=2700699
  
  - HTML filter: translate label attribute of OPTION/OPTGROUP/MENU tag
  http://sourceforge.net/support/tracker.php?aid=3436499

  Make the location of spelling dictionaries configurable
  http://sourceforge.net/support/tracker.php?aid=3434091

  Other enhancements:

  - Empty translations are now allowed. They are displayed as <EMPTY>
in the Editor. To create one, right-click in a segment, and select
"Set empty translation". The same popup menu also allows to Delete an