@@ -51,7 +51,8 @@
     Zoltan Bartko, Didier Briel, Kim Bruning, Alex Buloichik, Sandra Jean
     Chua, Martin Fleurke, Thomas Huriaux, Fabián Mandelbaum, John Moran,
     Arno Peters, Henry Pijffers, Briac Pilpré, Tiago Saboga, Andrzej Sawuła, 
-    Benjamin Siband, Rashid Umarov, Antonio Vilei and Martin Wunderlich.</para>
+    Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich and 
+    Michael Zakharov.</para>
 
     <para><emphasis role="bold">Distribution and
     modifications</emphasis></para>
