@@ -1,0 +1,6 @@
+"%s","Tr: %s"
+"There are <a href=""%s"">%s items</a> in your cart.","Tr: There are <a href=""%s"">%s items</a> in your cart."
+"Separate by "","".","Tr: Separate by "",""."
+"After selecting a new media storage location, press the 
+Synchronize button","Tr: After selecting a new media storage location, press the Synchronize button"
+"The reader repaired","Tr: The reader repaired"
